title and links added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--Fonts-->
+    <link href="https://fonts.cdnfonts.com/css/kredit-front" rel="stylesheet">
+                                                
+
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
 </head>
 <body>
-    <h1>Horror In Architecture</h1>
+    <nav>
+        <h1>Horror In Architecture</h1>
+       
+    </nav>
+    <ul class="fancy-list">
+        <li>
+          <div class="fancytexthover"><span class="textwrapper"><a href="#">Text of Awesome sauce</a></span><a href="#">Text of Awesome sauce</a></div>
+        </li>
+        <li>
+          <div class="fancytexthover"><span class="textwrapper"><a href="#">Other things</a></span><a href="#">Other things</a></div>
+        </li>
+        <li>
+          <div class="fancytexthover"><span class="textwrapper"><a href="#">Third</a></span><a href="#">Third</a></div>
+        </li>
+        <li>
+          <div class="fancytexthover"><span class="textwrapper"><a href="#">Lé Awesome</a></span><a href="#">Lé Awesome</a></div>
+        </li>
+        <li>
+          <div class="fancytexthover"><span class="textwrapper"><a href="#">Items of text that flow</a></span><a href="#">Items of text that flow</a></div>
+        </li>
+      </ul>
 </body>
 </html>
