need to fix links and (...)

--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
           <div class="fancytexthover"><span class="textwrapper"><a href="#">SoundCloud</a></span><a href="#">SoundCloud</a></div>
         </li>
         <li>
+          <div class="fancytexthover"><span class="textwrapper"><a href="#">Instagram</a></span><a href="#">Instagram</a></div>
+        </li>
+        <li>
           <div class="fancytexthover"><span class="textwrapper"><a href="#">Bandcamp</a></span><a href="#">Bandcamp</a></div>
         </li>
+        
+        <li>
+          <div class="fancytexthover"><span class="textwrapper"><a href="#">... ... ...</a></span><a href="#">... ... ...</a></div>
+        </li>
+
         <li>
           <div class="fancytexthover"><span class="textwrapper"><a href="#">The Hive (Part 1)</a></span><a href="#">The Hive (Part 1)</a></div>
         </li>
@@ -34,5 +42,8 @@
         </li>
         
       </ul>
+      <small class="rights">
+        Horror in Architecture 2023
+      </small>
 </body>
 </html>
