added a form needs styling

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
         </li>
         
       </ul>
+      <div class="message">
+        <form action="POST">
+          <label for="name">Name</label><br>
+          <input type="text" name="name"><br>
+          <label for="name">Email</label><br>
+          <input type="text" name="name"><br>
+          <label for="name">Message</label><br>
+          <textarea name="textarea" id="" cols="30" rows="10"></textarea><br>
+        </form>
+      </div>
       <small class="rights">
         Horror in Architecture 2023
       </small>
